--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WhatsApp Bot Admin</title>
+    <title>WappFlow Admin</title>
   </head>
-  <body class="bg-gray-900 text-gray-100">
+  <body class="bg-wa-bg text-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
