--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <meta name="theme-color" content="#111b21" />
+    <meta name="msapplication-TileColor" content="#49df80" />
+    <meta name="msapplication-TileImage" content="/mstile-150x150.png" />
+    <title>WappFlow Scheduler</title>
   </head>
   <body>
     <div id="app"></div>
